--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   # audioplayer: ^0.8.1
   # flutter_sound: ^9.2.13
   # permission_handler: ^10.1.0
+  file_picker: ^5.2.2
+  flutter_azure_tts: ^0.1.5
+  pdf_text: ^0.5.0
 
 dev_dependencies:
   flutter_test:
